# juus

./: .gitignore  .tmpXnyrUg  .tmpts9h9c  Cargo.toml  DESIGN.md  README  README.md  ideas
backend/: Cargo.toml  README.md
backend/src/: lib.rs
backend/src/node/: mod.rs
common/: Cargo.toml
common/src/: .lib.rs.swp  config.rs  lib.rs  model.rs
j_ui/: log.txt  user.json
j_ui/src/: main.rs
src/: .ds.rs.swp  .entrance.rs.swp  .main.rs.swp  ds.rs  e2ee.rs  entrance.rs  main.rs  types.rs
ui/: Cargo.toml  user.json
ui/src/: .main.rs.swp  main.rs  user.json
ui/src/windows/: chat.rs  groups.rs  login.rs  mod.rs
