[package]
name = "iroh-chat"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
iroh-gossip = "0.93.1"
n0-snafu = "0.2.2"
tokio = "1.48.0"
iroh = { version = "0.93.2", features = ["discovery-pkarr-dht", "discovery-local-network"]}
rand = "0.9.2"
rand_core = "0.6.4"
sha3 = "0.10.8"
hexhex = "1.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
futures-lite = "2.6.1"
clap = { version = "4.5.49", features = ["derive"] }
tempfile = "3.23.0"
mls-rs = "0.51.0"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"]}
mls-rs-crypto-openssl = "0.18.0"
