[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
common = { path = "../common" }
libp2p = { version = "0.54", features = ["noise", "tcp", "tokio", "yamux", "gossipsub", "mdns", "quic", "macros" ] }
log = "0.4.28"
n0-snafu = "0.2.2"
once_cell = "1.21.3"
rand = "0.9.2"
reqwest = "0.12.24"
serde = "1.0.228"
serde_bytes = "0.11.19"
tokio = "1.47.1"
