[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.100"
argon2 = { version = "0.5.3", features = ["std"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
once_cell = "1.21.3"
kademlia-dht = "1.2.0"
sha3 = "0.10.8"
