[package]
name = "ui"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
backend = { path = "../backend" }
anyhow = "1.0.100"
dioxus = "0.6.3"
serde_json = "1.0.145"
env_logger = "0.11.8"
log = "0.4.28"
dioxus-desktop = "0.6.3"
tokio = "1.48.0"
clap = { version = "4.5.49", features = ["derive"] }

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
